# BigRealNotation

./: A2_S24_20220087  README.md  main.cpp  upload our work in big real work here  upload our work in big real work here + important notes
A2_S24_20220087/: A2_S24_20220087_1.cpp  A2_S24_20220087_10.cpp  A2_S24_20220087_4.cpp  A2_S24_20220087_7.cpp  CMakeLists.txt  main.cpp
A2_S24_20220282/: A2_S24_20220282_11.cpp  A2_S24_20220282_2.cpp  A2_S24_20220282_5.cpp  A2_S24_20220282_8.cpp  CMakeLists.txt  main.cpp
A2_S24_20221119/: CMakeLists.txt  main.cpp
A2_Task3_S23,24_20220282_20220087_20221119/task3/: A2_Task3_S23,24_20220282_20220087_20221119.cpp
A2_part1_S23_24_20221119_20220087_20220282/A2_Task2_S23_24_20221119_20220087_20220282/: BigReal.cpp  BigReal.h  main.cpp
