cmake_minimum_required(VERSION 3.26)
project(PassionTest)

set(CMAKE_CXX_STANDARD 17)

add_executable(PassionTest main.cpp
        cmake-build-debug/A2_S23_20221119_3.cpp
        cmake-build-debug/A2_S23_20221119_6.cpp
        cmake-build-debug/A2_S23_20221119_9.cpp
        cmake-build-debug/A2_S23_20221119_12.cpp)
